--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <div class="container">
-      <div class="logo"></div>
+      <div class="logo">Logo</div>
       <div class="toggle"></div>
     </div>
   </nav>
