navbar side Done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
  <title>Portfolio</title>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <div class="logo">Logo</div>
-      <div class="toggle"></div>
-    </div>
-  </nav>
+  <header class="header">
+    <nav class="navbar">
+      <a href="#" class="logo">
+        <h1 class="logo">My Logo</h1>
+      </a>
+      <div class="toggle">
+        <img src="/image/Union.png" alt="" class="toggle-image">
+      </div>
+      <div class="menu">
+        <ul>
+          <li>Portfolio</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div> 
+    </nav>
+  </header>
 </body>
 </html>
