--- a/index.html
+++ b/index.html
@@ -25,5 +25,33 @@
       </div> 
     </nav>
   </header>
+  <main>
+    <section class="page-1">
+      <img class="image image-1" src="/image/Ellipse 8.png" alt="">
+      <img class="image image-2" src="/image/Ellipse 11.png" alt="">
+      <img class="image image-3" src="/image/Rectangle 7.png" alt="">
+      <img class="image image-4" src="/image/Rectangle 4.png" alt="">
+      <img class="image image-5" src="/image/Ellipse 3.png" alt="">
+      <img class="image image-6" src="/image/Ellipse 8.png" alt="">
+      <img class="image image-7" src="/image/Ellipse 13.png" alt="">
+      <img class="image image-8" src="/image/Ellipse 12.png" alt="">
+      <img class="image image-9" src="/image/Rectangle 5.png" alt="">
+      <img class="image image-10" src="/image/Ellipse 8.png" alt="">
+    <div>
+      <h1 class="p1-title">I'm Mahdi Glad to see You!</h1>
+      <p class="p1-description">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      <a href="#" class="p1-connect">Let's connect</a>
+      <div class="p1-link">
+        <ul class="p1-link">
+          <li><a href="#"><img src="/image/twitter-Vector.png" alt="" class="vector"></a></li>
+          <li><a href="#"><img src="/image/Linkedin-vector.png" alt="" class="vector"></a></li>
+          <li><a href="#"><img src="/image/m-Vector.png" alt="" class="vector"></a></li>
+          <li><a href="#"><img src="/image/github-Vector.png" alt="" class="vector"></a></li>
+          <li><a href="#"><img src="/image/finger-Vector.png" alt="" class="vector"></a></li>
+        </ul>
+      </div>
+    </div>
+    </section>
+  </main>
 </body>
 </html>
