--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="#" class="logo">
         <h1 class="logo">My Logo</h1>
       </a>
-      <div class="toggle">
+      <div class="nave-toggle">
         <img src="/image/Union.png" alt="" class="toggle-image">
       </div>
       <div class="menu">
@@ -27,16 +27,18 @@
   </header>
   <main>
     <section class="page-1">
-      <img class="image image-1" src="/image/Ellipse8.png" alt="">
       <img class="image image-2" src="/image/Ellipse11.png" alt="">
       <img class="image image-3" src="/image/Rectangle7.png" alt="">
       <img class="image image-4" src="/image/Rectangle4.png" alt="">
       <img class="image image-5" src="/image/Ellipse3.png" alt="">
-      <img class="image image-6" src="/image/Ellipse8.png" alt="">
       <img class="image image-7" src="/image/Ellipse13.png" alt="">
       <img class="image image-8" src="/image/Ellipse12.png" alt="">
       <img class="image image-9" src="/image/Rectangle5.png" alt="">
-      <img class="image image-10" src="/image/Ellipse8.png" alt="">
+      <img class="image image-1" src="/image/Rectangle6.png" alt="">
+                <!-- Backgound images -->
+      <img class="circle circle-1" src="/image/Ellipse8.png" alt="Circle 1">
+      <img class="circle circle-2" src="/image/Ellipse8.png" alt="Circle 2">
+      <img class="circle circle-3" src="/image/Ellipse8.png" alt="Circle 2">
     <div>
       <h1 class="p1-title">I'm Mahdi Glad to see You!</h1>
       <p class="p1-description">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
